--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.18.0",
     "bell-on-bundler-error-plugin": "^1.0.8",
     "chai": "^3.5.0",
     "enzyme": "^2.0.0",
@@ -46,7 +47,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
-  "engines" : { 
-    "node" : ">=6.2.2" 
-  } 
+  "engines": {
+    "node": ">=6.2.2"
+  }
 }
